<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_logo"
        android:transitionName="transition_scan"
        app:layout_constraintBottom_toTopOf="@id/gridContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <GridLayout
        android:id="@+id/gridContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo">

        <!-- Top Left: Scan -->
        <Button
            android:id="@+id/buttonStartScan"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/on_primary"
            android:text="@string/start_scan" />

        <!-- Top Right: Manage -->
        <Button
            android:id="@+id/buttonManageAllergens"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/on_secondary"
            android:text="@string/manage_allergens" />

        <!-- Bottom Left: History -->
        <Button
            android:id="@+id/buttonViewHistory"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="#4CAF50"
            android:textColor="@color/white"
            android:text="@string/view_scan_history" />

        <!-- Bottom Right: Settings -->
        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:backgroundTint="#9E9E9E"
            android:textColor="@color/white"
            android:text="Settings" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
