<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cameraScanRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CameraScanActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewViewCamera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.xiashuidaolaoshuren.allergyguard.ui.camera.OverlayView
        android:id="@+id/overlayViewCamera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCameraStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text=""
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        tools:text="Camera permission is required." />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/camera_back"
        app:icon="@drawable/ic_arrow_back"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonScriptSelector"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/camera_script_latin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFlipCamera"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/camera_flip"
        app:icon="@drawable/ic_camera_flip"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@id/buttonScriptSelector"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <HorizontalScrollView
        android:id="@+id/scrollAllergenChips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupAllergens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true" />

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/buttonScan"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_scan_button"
        android:clickable="true"
        android:contentDescription="@string/camera_scan_button"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_home_scan"
            android:tint="@color/black" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>